[package]
name = "cayenne_lpp"
description = "Rust crate that implements the Cayenne Low Power Payload (LPP) format"
authors = ["octoate"]
repository = "https://github.com/Octoate/CayenneLPP-rs"
keywords = ["no-std", "cayenne", "lpp", "lpwan", "lorawan"]
license = "MIT"
readme = "README.md"
exclude = ["tests/*"]
version = "0.4.0"
edition = "2024"

[dependencies]
